Change CMakeList.txt to compile gtest

--- a/labs/lab-01/CMakeLists.txt
+++ b/labs/lab-01/CMakeLists.txt
@@ -8,8 +8,8 @@ HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})
 DEAL_II_INITIALIZE_CACHED_VARIABLES()
 
 ADD_EXECUTABLE(gtest pythagoras.cc)
-FIND_PACKAGE(GTest)
-TARGET_LINK_LIBRARIES(gtest ${GTEST_LIBRARY})   
+FIND_PACKAGE(GTest REQUIRED)
+TARGET_LINK_LIBRARIES(gtest ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})   
 INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
 ENABLE_TESTING()
 
