--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Build lab 01
       run: |
          cd labs/lab-01
@@ -24,4 +25,15 @@ jobs:
     - name: Run gtest on lab 01 
       run: |
          cd labs/lab-01/build_linux_debug
+         ./gtest
+    - name: Build lab 02
+      run: |
+         cd labs/lab-02
+         rm -rf build_linux_debug
+         mkdir build_linux_debug 
+         cd build_linux_debug
+         cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug; ninja
+    - name: Run gtest on lab 02 
+      run: |
+         cd labs/lab-02/build_linux_debug
          ./gtest
