--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,3 +50,15 @@ jobs:
       run: |
          cd labs/lab-03/build_linux_debug
          ./gtest
+
+    - name: Build lab 04
+      run: |
+         cd labs/lab-04
+         rm -rf build_linux_debug
+         mkdir build_linux_debug 
+         cd build_linux_debug
+         cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug; ninja
+    - name: Run gtest on lab 04 
+      run: |
+         cd labs/lab-04/build_linux_debug
+         ./gtest         
