--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,4 +61,16 @@ jobs:
     - name: Run gtest on lab 04 
       run: |
          cd labs/lab-04/build_linux_debug
-         ./gtest         
+         ./gtest
+
+    - name: Build lab 05
+      run: |
+         cd labs/lab-05
+         rm -rf build_linux_debug
+         mkdir build_linux_debug 
+         cd build_linux_debug
+         cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug; ninja
+    - name: Run gtest on lab 05 
+      run: |
+         cd labs/lab-05/build_linux_debug
+         ./gtest
